--- a/package.json
+++ b/package.json
@@ -36,5 +36,9 @@
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.0.0",
 		"vitest": "^3.0.0"
+	},
+	"dependencies": {
+		"@tailwindcss/vite": "^4.0.6",
+		"tailwindcss": "^4.0.6"
 	}
 }
