--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
 		"prettier-plugin-svelte": "^3.3.3",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"sveltekit-superforms": "^2.23.1",
 		"tailwindcss": "^4.0.6",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.0.0",
-		"vitest": "^3.0.0"
+		"vitest": "^3.0.0",
+		"zod": "^3.24.2"
 	},
 	"dependencies": {
 		"@supabase/ssr": "^0.5.2",
