Add user account deletion and flash message

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"prettier-plugin-svelte": "^3.3.3",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
+		"sveltekit-flash-message": "^2.4.6",
 		"sveltekit-superforms": "^2.23.1",
 		"tailwindcss": "^4.0.6",
 		"typescript": "^5.0.0",
