Add proper pets API requests

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 	},
 	"dependencies": {
 		"@supabase/ssr": "^0.5.2",
-		"@supabase/supabase-js": "^2.48.1"
+		"@supabase/supabase-js": "^2.48.1",
+		"cleave-zen": "^0.0.17"
 	}
 }
